--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,44 +1,46 @@
-        <div class="container-fluid blue" style="margin-bottom: 0;">
-            <div class="container gray">
-                <div class="row">
-                    <div class="col" style="height: 180px;">
-                        <div class="social-container">
-                            <a class="social github" href="https://github.com/SSelke" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a class="social linkedin" href="https://www.linkedin.com/in/scott-selke/" target="_blank">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
-                            <a class="social facebook" href="https://www.facebook.com/lololol1234" target="_blank">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a class="social instagram" href="https://www.instagram.com/s.w.selke/" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a class="social twitch" href="https://www.twitch.tv/lofidevelopment" target="_blank">
-                                <i class="fab fa-twitch"></i>
-                            </a>
-                        </div>
-
-                        <p class="white footer-break" style="margin-top: 24px;">
-                            <a class="white" href="/portfolio">Portfolio</a>   <span>::</span>  
-                            <a class="white" href="/about">About</a>   <span>::</span>  
-                            <a class="white" href="/resources">Resourses</a>   <span>::</span>  
-                            <a class="white" href="/contact">Contact</a>   <span>::</span>  
-                            <a class="white go-up" href="#page-up">Go Up</a>
-                        </p>
-
-                        <p class="footer-text">Copyright Scott Selke | 2018</p>
+    <div style="flex: 1;"></div>
+    <div class="container-fluid blue" id="footer" style="margin-bottom: 0;">
+        <div class="container gray">
+            <div class="row">
+                <div class="col" style="height: 180px;">
+                    <div class="social-container">
+                        <a class="social github" href="https://github.com/SSelke" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a class="social linkedin" href="https://www.linkedin.com/in/scott-selke/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a class="social facebook" href="https://www.facebook.com/lololol1234" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="social instagram" href="https://www.instagram.com/s.w.selke/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="social twitch" href="https://www.twitch.tv/lofidevelopment" target="_blank">
+                            <i class="fab fa-twitch"></i>
+                        </a>
                     </div>
+
+                    <p class="white footer-break" style="margin-top: 24px;">
+                        <a class="white" href="/portfolio">Portfolio</a>   <span>::</span>  
+                        <a class="white" href="/about">About</a>   <span>::</span>  
+                        <a class="white" href="/resources">Resourses</a>   <span>::</span>  
+                        <a class="white" href="/contact">Contact</a>   <span>::</span>  
+                        <a class="white go-up" href="#page-up">Go Up</a>
+                    </p>
+
+                    <p class="footer-text">Copyright Scott Selke | 2018</p>
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-            crossorigin="anonymous"></script>
-        <script src="/javascript/header.js"></script>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
+<script src="/javascript/header.js"></script>
     </body>     
 
 </html>
