--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div id="comment_bubble">
-                <i class="far fa-lightbulb resource-icon"></i>
+                <i class="far fa-lightbulb resource-icon light"></i>
             </div>
             <h4>Intiutive</h4>
             <p>
@@ -35,6 +35,7 @@
         <div class="col-md-3 col-sm-6">
             <div id="comment_bubble">
                 <i class="fas fa-space-shuttle resource-icon resource-icon-shuttle"></i>
+                <i class="fab fa-gripfire resource-icon resource-icon-fire flame"></i>
             </div>
             <h4>Dynamic</h4>
             <p>
@@ -51,156 +52,27 @@
             </p>
         </div>
     </div>
-    <!-- <div id="description"></div>
     <div class="row">
-        <div class="col-lg-6 col-md-12 desc">
-            <section class="html visible">
-                <div class="resource-picture html-picture"></div>
-                <span><hr class="teal" style="height:3px;border:none;"><h3>HTML5</h3><hr class="teal" style="height:3px;border:none;"></span>
-                <p>I write all of my pages Semantically, making sure to utilize everything HTML5 has to offer. All of my pages are structured using the same base template that I made from scratch. If a page is not structured from the very beginning, it is doomed to fail.</p>
-            </section>
-            <section class="css hidden">
-                <div class="resource-picture css-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>CSS3</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>All of my pages contain customer CSS to make the user experience unique. I take advantage of light-weight versions or Semantic-Ui, Bootstrap, and Font-Awesome to use key components that would otherwise take a long period of time to write.</p>
-            </section>
-            <section class="sass hidden">
-                <div class="resource-picture sass-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>SASS</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Sass is my go-to CSS pre-processor. With it, I can structure my CSS in meaningful ways, as well as make my stylesheets enterprise worthy, and easily scalable for large projects.</p>
-            </section>
-            <section class="java hidden">
-                <div class="resource-picture javascript-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>JavaScript</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>With Javascript I can manage my client-side pages, but also perform logic on the back-end with NodeJS. Javascript allows me to perform basic, and advanced logic to help make my pages dynamic and alive.</p>
-            </section>
-            <section class="angular hidden">
-                <div class="resource-picture angular-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>Angular5</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Angular5 is a great tool framework that I have used to make some fun SPA's (Single Page Applications). Though my experience with Angular is limited, I have a strong understanding of it's core concepts and a great appreciation for it's modularity.</p>
-            </section>
-            <section class="react hidden">
-                <div class="resource-picture react-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>ReactJS</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>React is a great Javascript library that makes fast-loading SPA's (Sing Page Applications). Although I have not spent a lot of time using react I have a grasp on it's core concepts. This is a library that I would use when creating a page with SEO in mind.</p>
-            </section>
-            <section class="jquery hidden">
-                <div class="resource-picture jquery-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>jQuery</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>I use Jquery pretty often in cases where I will be using a decent amount of Javascript. I utilize jQuery because it makes a good amount of logistical tasks far easier than if I were to use vanilla JS.</p>
-            </section>
-            <section class="node hidden">
-                <div class="resource-picture node-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>NodeJS</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Because of my knowledge of Javascript, NodeJS is a really easy server-side tool for me to make use of. I like it's flexibility and the growing community of developers continuously making it better.</p>
-            </section>
-            <section class="php hidden">
-                <div class="resource-picture php-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>PHP</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>My knowledge of PHP extends to editing basic WordPress Templates for a friend of mine. I am looking forward to working on a new blog with my sister starting in the next coming weeks!</p>
-            </section>
-            <section class="mongo hidden">
-                <div class="resource-picture mongo-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>MongoDB</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>I particularly like MongoDB because it is great for small/medium applications. I use some form of a Mongo database on most of my websites.</p>
-            </section>
-            <section class="mysql hidden">
-                <div class="resource-picture mysql-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>MySQL</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Most of my experience with MySQL is from personal projects on my home document and media server. I am currently going through more self learning to add more functionality to my home server.</p>
-            </section>
-            <section class="git hidden">
-                <div class="resource-picture github-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>Git + Github</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Git and Github are integral for version control and I utilize both on every project that I work on. I know everything for setup and install, to commits, merging, pulling and publishing.</p>
-            </section>
-            <section class="ms hidden">
-                <div class="resource-picture ms-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>Microsoft Office</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>I have extensive Microsoft Office training courtesy of my sales position at State Farm insurance. Excel, Word, One Note, and Outlook are my strong suites.</p>
-            </section>
-            <section class="photoshop hidden">
-                <div class="resource-picture photoshop-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>Adobe Photoshop</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>Most of my sites have images that I pull from royalty-free resources. I use Photoshop to compress, resize, and make my images more efficient for loading times.</p>
-            </section>
-            <section class="illustrator hidden">
-                <div class="resource-picture illustrator-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>Adobe Illustrator</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>My main use for Adobe Illustrator is to create custome logos, and SVG's (Scaled Vector Graphics). I also leverage my mad skills to create some awesome graphics and custome headers.</p>
-            </section>
-            <section class="ux hidden">
-                <div class="resource-picture ux-picture"></div>
-                <span>
-                    <hr class="teal" style="height:3px;border:none;">
-                    <h3>User Experience</h3>
-                    <hr class="teal" style="height:3px;border:none;">
-                </span>
-                <p>My personal favorite aspect of a website is how the user interacts, and navigates with the page. There is nothing that I dislike more than a webpage that is not user friendly and intuitive.</p>
-            </section>
-        </div> -->
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    
+        <div class="col-lg-6 col-md-12" style="margin-top: 40px;">
+            <div class="container">
+                <div class="container">
+                    <div class="hexagon">
+                        <h3>
+                            <i class="fas fa-toolbox resource-icon-toolbox"></i>
+                        </h3>
+                    </div>
                 </div>
+                <h2 style="margin-top: 130px;">My Developer Tool-box</h2>
+                <p>
+                    Everyday I am always learning about new Technologies that better improve my sites and development process.
+                    As a developer, I have many tools under my belt that enable me to create responsive and functional websites.
+                    For most projects I use Code Virtual Studio as my go-to IDE, and for bigger projects or collabs I use Cloud 9 
+                    IDE to speed up the development process.
+                    Every website that I create runs through <a href="https://loadimpact.com/">Load Impact</a> to check for 
+                    loading times, <a href="https://www.getpostman.com/">Postman</a> to check link functionality, and a host 
+                    of other resources to get the job done; some of which include 
+                    (<a href="https://github.com/heyalexej/awesome-images">Awesome Images</a>, <a href="fonts.google.com">Google Fonts</a>, <a href="sselke.codepen.io">Code Pen</a>).
+                </p>
             </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -234,61 +106,61 @@
                             <span class="chart__title">Development</span>
                             <ul class="chart--horiz">
                                 <li class="chart__bar" id="html" style="width: 80%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         HTML5
-                                    </a>
+                                    </span>
                                 </li>
                                 <div class="click--me">
                                     <li class="chart__bar" id="css" style="width: 80%;">
-                                        <a href="#description" class="chart__label white">
+                                        <span  class="chart__label white">
                                             CSS3
-                                        </a>
+                                        </span>
                                     </li>
                                 </div>
                                 <li class="chart__bar" id="sass" style="width: 66%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         SCSS
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="java" style="width: 70%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         JavaScript
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="angular" style="width: 40%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         AngularJS
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="react" style="width: 33%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         ReactJS
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="jquery" style="width: 50%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         jQuery
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="node" style="width: 66%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         NodeJS
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="php" style="width: 33%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         PHP
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="mongo" style="width: 66%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         MongoDB
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="mysql" style="width: 33%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span  class="chart__label white">
                                         MySQL
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -297,14 +169,14 @@
                             <span class="chart__title">Productivity</span>
                             <ul class="chart--horiz">
                                 <li class="chart__bar" id="git" style="width: 66%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span class="chart__label white">
                                         Git + Github
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="ms" style="width: 70%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span class="chart__label white">
                                         Microsoft Office
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
@@ -313,19 +185,19 @@
                             <span class="chart__title">Design</span>
                             <ul class="chart--horiz">
                                 <li class="chart__bar" id="photoshop" style="width: 33%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span class="chart__label white">
                                         Photoshop
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="illustrator" style="width: 40%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span class="chart__label white">
                                         Illustrator
-                                    </a>
+                                    </span>
                                 </li>
                                 <li class="chart__bar" id="ux" style="width: 66%;">
-                                    <a href="#description" class="chart__label white">
+                                    <span class="chart__label white">
                                         User Experience
-                                    </a>
+                                    </span>
                                 </li>
                             </ul>
                         </div>
