--- a/Public/Assets/css/main.css
+++ b/Public/Assets/css/main.css
@@ -76,6 +76,12 @@ body {
   margin: 0 auto;
 }
 
+.site-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 a {
   color: #525d68;
   font-weight: 300;
@@ -174,6 +180,12 @@ a:hover, a:focus {
   background: #2a3b4e;
   margin: 10px auto 80px auto;
   animation: 0.65s pull-left ease-in;
+}
+
+#body {
+  padding: 10px;
+  padding-bottom: 180px;
+  /* Height of the footer */
 }
 
 #nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
@@ -275,11 +287,50 @@ a:hover, a:focus {
   border-bottom: 13px solid transparent;
 }
 
+#bubble {
+  width: 200px;
+  height: 100px;
+  background: #1ba49c;
+  margin: 24px auto;
+  position: relative;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+  border-radius: 12px;
+}
+
+.hexagon {
+  position: relative;
+  width: 300px;
+  height: 173.21px;
+  background-color: #1ba49c;
+  margin: 86.6px auto;
+}
+.hexagon:before, .hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 150px solid transparent;
+  border-right: 150px solid transparent;
+}
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 86.6px solid #1ba49c;
+}
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 86.6px solid #1ba49c;
+}
+
 html {
   height: 100%;
+  min-height: 100% !important;
 }
 
 body {
+  box-sizing: border-box;
+  position: relative;
+  min-height: 100%;
   height: 100%;
   line-height: 24px;
   font-weight: 400;
@@ -361,6 +412,10 @@ h1 {
   }
 }
 
+#push {
+  height: 180px;
+}
+
 @media screen and (max-width: 500px) {
   .footer-break {
     font-size: 12px;
@@ -420,4 +475,4 @@ i {
   text-align: center;
 }
 
-/*# sourceMappingURL=../../Assets/css/main.css.map */
+/*# sourceMappingURL=../Assets/css/main.css.map */
