--- a/Public/Sass/Base/_base.icons.scss
+++ b/Public/Sass/Base/_base.icons.scss
@@ -97,3 +97,42 @@
     border-right: 26px solid $color_teal;
     border-bottom: 13px solid transparent;
 }
+
+#bubble {
+    width: 200px;
+    height: 100px;
+    background: $color_teal;
+    margin: $spacing-normal auto;
+    position: relative;
+    -moz-border-radius: 12px;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+}
+
+.hexagon {
+  position: relative;
+  width: 300px; 
+  height: 173.21px;
+  background-color: $color_teal;
+  margin: 86.60px auto;
+
+  &:before,
+  &:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 150px solid transparent;
+  border-right: 150px solid transparent;
+  }
+
+  &:before {
+  bottom: 100%;
+  border-bottom: 86.60px solid $color_teal;
+  }
+
+  &:after {
+  top: 100%;
+  width: 0;
+  border-top: 86.60px solid $color_teal;
+  }
+}
