--- a/Public/Sass/Base/_base.scss
+++ b/Public/Sass/Base/_base.scss
@@ -7,9 +7,16 @@
 
 html {
     height: 100%;
+    min-height: 100% !important;
 }
 
 body{
+
+    box-sizing: border-box;
+
+    position: relative;
+
+    min-height: 100%;
 
     height: 100%;
     //set line heights
