--- a/Public/Sass/Partials/_footer.scss
+++ b/Public/Sass/Partials/_footer.scss
@@ -1,3 +1,14 @@
+// #footer {
+//     position:absolute;
+//    bottom:0;
+//    width:100%;
+//    height:180px;   /* Height of the footer */
+// }
+
+#push{
+    height: 180px;
+}
+
 .footer-break{
     @media screen and (max-width: 500px){
         font-size: 12px;
