--- a/Public/Sass/Base/_base.theme.scss
+++ b/Public/Sass/Base/_base.theme.scss
@@ -103,7 +103,7 @@ a{
 }
 
 .page-header{
-    margin-top: $spacing-largest;
+    margin-top: $spacing-normal;
     font-size: $font-largest;
     opacity: 1;
     animation: 0.65s pull-left ease-in;
@@ -113,11 +113,11 @@ a{
     width: 100px;
     height: 5px;
     background: $color_footer_dark;
-    margin: 10px auto 80px auto;
+    margin: 10px auto;
     animation: 0.65s pull-left ease-in;
-}   
+} 
 
-#body {
-   padding:10px;
-   padding-bottom:180px;   /* Height of the footer */
+.head-container{
+   height: 100%;
+   margin-bottom: 15px; 
 }
