--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -11,14 +11,10 @@
         <div class="page-header-line"></div>
     </div>
 
-    <div class="container">
-        <div class="row card-row">
-            <div class="col card-col">
-                <div class="card" style="background: red !important"></div>
-            </div>
-            <div class="col card-col">
-                <div class="card"></div>
-            </div>
-        </div>
+    <div class="grid">
+        <div class="box" style="background: red">A</div>
+        <div class="box" style="background: blue">B</div>
+        <div class="box" style="background: green">C</div>
+        <div class="box" style="background: purple">D</div>
     </div>
 <% include partials/footer %>
